2005-03-24  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpimage-undo-push.[ch]
	* app/core/gimplayermask.c: fix compile warnings. 

2005-03-24  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c (gimp_statusbar_push_coords) 
	(gimp_statusbar_set_cursor): use RINT() instead or ROUND() to get
	proper rounding of negative values. Fixes bug #171497.

2005-03-24  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/core-enums.[ch]
	* app/core/gimpimage-undo-push.[ch]
	* app/core/gimplayermask.[ch]: 
	* app/pdb/pdb_glue.h
	* app/actions/layers-commands.c: try again from clean tree;
	hopefully will work this time.  (bug #148852)
	
2005-03-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/*.scm: don't mark menu branches for
	translation; the translatable branch name is registered by the
	Script-Fu extension.

2005-03-24  Michael Natterer  <mitch@gimp.org>

	Added API to explicitly register dynamic menu items hierarchies.
	Fixes bug #170623.

	* app/core/gimp.h: added "GSList *plug_in_menu_branches".

	* app/plug-in/plug-in-types.h

	* app/plug-in/plug-ins.[ch]: added API to register plug-in menu
	branches, just as for locale and help domans. Cleaned up handling
	of locale and help domains.

	(plug_ins_exit): free the registered menu branches.

	* app/actions/plug-in-actions.[ch] (plug_in_actions_add_branch):
	new function to explicitly add a menu branch action.

	(plug_in_actions_setup): add the registered menu branches to each
	new action group.

	(plug_in_actions_build_path): always strip the untranslated menu
	path from underlines before using it as hash table key or action
	name.

	* app/menus/plug-in-menus.c (plug_in_menus_add_proc): changed
	accordingly: strip underlines from untranslated menu paths before
	passing them to plug_in_menus_build_path().

	* app/core/gimp-gui.[ch]: added gimp_menus_create_branch() plus
	vtable entry to access the new stuff from the core. Renamed the